--- a/src/views/layout.scss
+++ b/src/views/layout.scss
@@ -8,4 +8,12 @@
   margin-top: 16.5vh;
   box-shadow: 0px 0px 20px black;
   border-radius: 5px;
+  
+  padding: 20px;
+}
+
+
+h1 {
+  text-align: center;
+  font-size: 54px;
 }
